core subtree migrated to JDK11. New Doclet for workflow-api to be tested yet.